updated index file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Olatunji Adebajo</title>
+    <title>About Me</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 36px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+        }
+    </style>
 </head>
-
-
 <body>
-    
+    <header>
+        <h1>About Me</h1>
+    </header>
+    <div class="container">
+        <h2>Hi, I'm [Your Name]</h2>
+        <p>Welcome to my personal webpage. Here's a little bit about me.</p>
+
+        <h3>Background</h3>
+        <p>I am a [Your Profession/Title] with a passion for [Your Interests/Hobbies]. I graduated from [Your University] with a degree in [Your Degree] and have been [Your Current Job/Activity] for [X years/months].</p>
+
+        <h3>Professional Experience</h3>
+        <p>I have worked with various organizations, including [Company 1] and [Company 2]. My experience includes [Your Key Skills/Expertise].</p>
+
+        <h3>Hobbies and Interests</h3>
+        <p>Outside of work, I enjoy [Your Hobbies and Interests]. Whether it's [Hobby 1] or [Hobby 2], I find joy in pursuing these activities in my free time.</p>
+
+        <h3>Contact Me</h3>
+        <p>If you'd like to get in touch with me, feel free to send me an email at [Your Email Address]. You can also connect with me on [Your Social Media Profiles] for updates on my professional and personal journey.</p>
+    </div>
 </body>
 </html>
