added my experience

--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
         <h1>About Me</h1>
     </header>
     <div class="container">
-        <h2>Hi, I'm [Your Name]</h2>
+        <h2>Hi, I'm Olatunji Adebajo</h2>
         <p>Welcome to my personal webpage. Here's a little bit about me.</p>
 
         <h3>Background</h3>
-        <p>I am a [Your Profession/Title] with a passion for [Your Interests/Hobbies]. I graduated from [Your University] with a degree in [Your Degree] and have been [Your Current Job/Activity] for [X years/months].</p>
+        <p>I am an n experienced infrastructure engineer with a passion for software development, business, and entrepreneurship. I graduated from Obafemi Awolowo University 
+            with a degree in Electronic and Electrical enginering and have been a solution architect for over 13 years. </p>
 
         <h3>Professional Experience</h3>
-        <p>I have worked with various organizations, including [Company 1] and [Company 2]. My experience includes [Your Key Skills/Expertise].</p>
+        <p>I have worked with various organizations, including Task Systems and Weco Systems Ltd, in Nigeria. My experience includes Networking, Datacentre, Security, Cloud, Devops, Python
+            and IoT.</p>
 
         <h3>Hobbies and Interests</h3>
         <p>Outside of work, I enjoy [Your Hobbies and Interests]. Whether it's [Hobby 1] or [Hobby 2], I find joy in pursuing these activities in my free time.</p>
