changed body and header colour

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    
+
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -26,18 +29,19 @@
             padding: 20px;
             background-color: #fff;
         }
-    </style>
+    </style>      -->
 </head>
 <body>
     <header>
         <h1>About Me</h1>
     </header>
+    
     <div class="container">
         <h2>Hi, I'm Olatunji Adebajo</h2>
         <p>Welcome to my personal webpage. Here's a little bit about me.</p>
 
         <h3>Background</h3>
-        <p>I am an n experienced infrastructure engineer with a passion for software development, business, and entrepreneurship. I graduated from Obafemi Awolowo University 
+        <p>I am an experienced infrastructure engineer with a passion for software development, business, and entrepreneurship. I graduated from Obafemi Awolowo University 
             with a degree in Electronic and Electrical enginering and have been a solution architect for over 13 years. </p>
 
         <h3>Professional Experience</h3>
